--- a/package.json
+++ b/package.json
@@ -254,6 +254,8 @@
   "devDependencies": {
     "eslint": "^8.27.0",
     "eslint-plugin-react": "^7.31.10",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-config-airbnb-base": "^15.0.0",
     "nodemon": "^2.0.20"
   },
   "scripts": {
