--- a/.eslintrc
+++ b/.eslintrc
@@ -1,23 +1,11 @@
 {
-    "env": {
-        "browser": true,
-        "es2021": true
-    },
-    "extends": [
-      "eslint:recommended",
-      "plugin:react/recommended",
-      "airbnb-base"
-    ],
-    "overrides": [
-    ],
-    "parserOptions": {
-        "ecmaVersion": "latest",
-        "sourceType": "module"
-    },
-    "plugins": [
-        "react"
-    ],
-    "rules": {
-      "eslint no-underscore-dangle": ["error", { "allow": ["_id"] }]
-    },
+  "extends": "airbnb-base",
+  "rules": {
+    "no-underscore-dangle": [
+      "warn",
+      {
+        "allow": ["_id"]
+      }
+  ]
+  }
 }
