--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,15 @@
 {
+  "env": {
+    "browser": true,
+    "es2021": true
+  },
   "extends": "airbnb-base",
+  "overrides": [
+  ],
+  "parserOptions": {
+      "ecmaVersion": "latest",
+      "sourceType": "module"
+  },
   "rules": {
     "no-underscore-dangle": ["error",{"allow":["_id"]}]
   }
