13 sprint: backend for Mesto. 11th attempt

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "nodemon": "^2.0.20"
   },
   "scripts": {
-    "lint": "npx eslint ./ --fix",
+    "lint": "npx eslint ./",
     "start": "node app.js",
     "dev": "nodemon app.js"
   },
