--- a/package.json
+++ b/package.json
@@ -4,14 +4,19 @@
   "description": "Бэкенд для проекта Mesto",
   "main": ".app.js",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
+    "celebrate": "^15.0.1",
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
-    "mongoose": "^6.7.2"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.7.2",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "eslint": "^8.27.0",
-    "eslint-plugin-import": "^2.26.0",
     "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0",
     "nodemon": "^2.0.20"
   },
   "scripts": {
