--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-winston": "^4.2.0",
+    "helmet": "^6.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.2",
     "validator": "^13.7.0",
